--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 //lezem ykounou majuscule
 MONGODB_URI = mongodb+srv://farahdkhil:xaFyuiWxCl70Yefb@cluster0.uwo0o4y.mongodb.net/?retryWrites=true&w=majority
 PORT = 1000
+JWT_SECRET=RESTFULAPIs
