--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
-  }
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/farahdkhil/projetNodejs.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/farahdkhil/projetNodejs/issues"
+  },
+  "homepage": "https://github.com/farahdkhil/projetNodejs#readme"
 }
