--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 //lezem ykounou majuscule
-MONGODB_URI = mongodb+srv://farahdkhil:xaFyuiWxCl70Yefb@cluster0.uwo0o4y.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://root:root@clusterdb.j0soxuy.mongodb.net/?retryWrites=true&w=majority
 PORT = 1000
 JWT_SECRET=RESTFULAPIs
+
+
